hphp/hack/test/typecheck/expression_trees_not_virtualize_functions/property_access_error.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

function test(): void {
  ExampleDsl`(MyState $x) ==> {
    $x->my_prop = "Hello";
  }`;
}

abstract class MyState {
  public ExampleInt $my_prop;
}
